# AniMadeus-py

./: .gitignore  animadeus.py  bot_data.py  launch.sh  off_topic.py  pyproject.toml  readme.md  requirements.txt
actions/: link_if_member.py
cli/: log.py  set_member.py
cog/: command_socket.py  dev_socket.py
daemon/: __init__.py
